# parames

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml
config/: default.yaml
deployment/: docker-compose.yaml
docs/agents/: testing-instructions.md
scripts/: capture_open_meteo_snapshot.py
spec/: App.md  Bise Plugin.md  Deep scoring reports.md  Groundhandling Alerts.md  Initial Wind Alert.md  Laminar Plugin.md  Scheduler Logs.md
src/parames/: backtest.py  capture.py  cli.py  common.py  config.py  delivery.py  domain.py  evaluation.py  forecast.py  logging.py  runner.py  scheduler.py  seed.py
src/parames/api/: __init__.py  deps.py  main.py
src/parames/delivery/: _charts.py  delivery_cli.py  delivery_telegram.py
src/parames/evaluation/: __init__.py  core.py  direction.py  scoring.py  wind.py  windows.py
src/parames/persistence/: __init__.py  models.py  repository.py
tests/: conftest.py  snapshot_fixtures.py  test_delivery.py  test_evaluation.py
tests/integration/: test_integration_open_meteo.py
tests/snapshot/: test_weak_forecast.py
tests/unit/: test_bise_report.py  test_config.py  test_delivery.py  test_delivery_telegram.py  test_evaluation.py  test_forecast.py  test_health.py  test_hour_evaluation_trace.py  test_laminar_report.py  test_logging.py  test_persistence.py  test_plugins_bise.py  test_plugins_laminar.py  test_scoring_trace.py
webapp/: index.html  package-lock.json  package.json  styles.css  vite.config.js
webapp/js/: api.js  main.js  router.js
webapp/src/: App.vue  api.js  styles.css
(+57 files in other folders)
